--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body{
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Main Rules */
@@ -38,6 +39,7 @@ body{
     border-radius: 50%;
     cursor: pointer;
     font-size: 22px;
+    z-index: 500;
 }
 
     .circle:hover{
@@ -68,4 +70,25 @@ body{
 /* Nascondere slide */
 .hidden{
     display: none;
+}
+
+#card{
+    position: relative;
+    color: white;
+}
+
+.text-img{
+    position: absolute;
+    bottom: 50px;
+    right: 20px;
+    text-align: right;
+}
+
+#title{
+   font-weight: bold; 
+   font-size: 20px;
+}
+
+#text{
+    margin-top: 10px;
 }
