--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -21,7 +21,7 @@ body{
 
 .item{
     text-align: center;
-    width: 50%;
+    width: 90%;
     height: 500px;
     display: flex;
     justify-content: center;
@@ -56,9 +56,8 @@ body{
     }
 
 .img-carousel{
-    max-height: 500px;
-    border: 2px solid white;
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
     display: none;
 }
 
@@ -70,6 +69,12 @@ body{
 #card{
     position: relative;
     color: white;
+    height: 600px;
+    width: 70%;
+}
+
+#card img {
+    object-fit: cover;
 }
 
 .text-img{
@@ -86,4 +91,28 @@ body{
 
 #text{
     margin-top: 10px;
+}
+
+#preview{
+    position: relative;
+    height: 600px;
+    width: 30%;
+}
+
+.container-img{
+    height: calc(100% / 5);
+}
+
+.container-img img{
+    object-fit: cover;
+
+}
+
+.img-preview{
+    height: 100%;
+    width: 100%;
+}
+
+.block-active{
+    border: 5px solid rgba(255, 255, 255, 0.5);
 }
