--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -22,11 +22,13 @@ body{
 .item{
     text-align: center;
     width: 90%;
-    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    border: 3px solid white;
+    border-radius: 10px;
+    padding: 1px;
 }
 
 .circle{
@@ -61,7 +63,6 @@ body{
     display: none;
 }
 
-/* Mostrare slide */
 .active{
     display: inline-block;
 }
@@ -129,14 +130,19 @@ body{
     display: none;
 }
 
-#start, #stop, #reverse{
+#startStop, #reverse{
     background-color: rgba(255, 255, 255, 0.5);
     font-size: 50px;
     border: none;
     color: black;
-    padding: 0px 10px;
+    padding: 0px 12px;
     border-radius: 10px;
+    border: 2px solid black;
+    cursor: pointer;
 }
 
-#start:active{
+#startStop:hover, #reverse:hover{
+    background-color: gray;
+
 }
+
